Instituição sendo criada com sucesso - SEM DEPARTAMENTO E ALUNOS CADASTRADOS

--- a/LAB2/Codigo/backend/moedaEstudantil/src/main/resources/application.properties
+++ b/LAB2/Codigo/backend/moedaEstudantil/src/main/resources/application.properties
@@ -15,4 +15,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
-api.security.token.secret=my-secret-key-asfasfacaaca-asfafas
+API_SECURITY_TOKEN_SECRET:=my-secret-key-asfasfacaaca-asfafas
